--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3"
+    "jsonwebtoken": "^8.5.1"
+  },
+  "engines": {
+    "node" : "v16.14.0"
   }
 }
