--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Project untuk test",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
