--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   "keywords": [],
   "author": "Rikian Faisal",
   "license": "MIT",
+  "devDependencies": {
+    "jest": "^28.1.2",
+    "supertest": "^6.2.4"
+  },
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1"
+    "jest": "^28.1.3",
+    "jsonwebtoken": "^8.5.1",
+    "supertest": "^6.2.4"
   },
   "engines": {
     "node": "v16.14.0"
