--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   "author": "Rikian Faisal",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^28.1.2",
-    "supertest": "^6.2.4"
+    "jest": "latest",
+    "supertest": "latest"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.0.1",
-    "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "jest": "^28.1.3",
-    "jsonwebtoken": "^8.5.1",
-    "supertest": "^6.2.4"
+    "cookie-parser": "latest",
+    "dotenv": "latest",
+    "ejs": "latest",
+    "express": "latest",
+    "jest": "latest",
+    "jsonwebtoken": "latest",
+    "supertest": "latest"
   },
   "engines": {
-    "node": "v16.14.0"
+    "node": "v18.12.1"
   }
 }
