--- a/.env
+++ b/.env
@@ -1,1 +1,17 @@
+# APP config
+ADDRESS=0.0.0.0
 PORT=9091
+# if empty, default development
+STATUS=
+# if empty, default "e19c26220938b93064126f259a4564b3"
+JWT_SECRET_KEY=
+# if empty, default "--BULU_KNTL_001--"
+MAGIC_KEY_SHA256=
+
+# db config for postgres
+DIALECT=postgres
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_NAME=
