--- a/.env
+++ b/.env
@@ -8,10 +8,10 @@ JWT_SECRET_KEY=
 # if empty, default "--BULU_KNTL_001--"
 MAGIC_KEY_SHA256=
 
-# db config for postgres
+# db config
 DIALECT=postgres
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
-DB_NAME=
+DB_USER=rikian
+DB_PASSWORD=wsxcvbnm,.1234
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_NAME=tes_praktek_node_js_progamer
