--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # APP config
+# ADDRESS=192.168.43.38
 ADDRESS=0.0.0.0
 PORT=9091
 # if empty, default development
@@ -10,8 +11,8 @@ MAGIC_KEY_SHA256=
 
 # db config
 DIALECT=postgres
-DB_USER=rikian
-DB_PASSWORD=wsxcvbnm,.1234
+DB_USER=
+DB_PASSWORD=
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_NAME=tes_praktek_node_js_progamer
+DB_NAME=
