--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.3",
     "ejs": "latest",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "formidable": "^2.1.1",
     "jsonwebtoken": "latest",
     "pg": "^8.8.0",
@@ -33,7 +34,8 @@
     "sequelize": "^6.28.0",
     "uuid": "^9.0.0",
     "validator": "^13.7.0",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "xss-clean": "^0.1.1"
   },
   "engines": {
     "node": "v18.12.1"
